# metro2019

./: Area.cpp  Area.h  CMakeLists.txt  Display.cpp  Display.h  Graph.cpp  Graph.h  Graphics.cpp  Graphics.h  Makefile  Point.cpp  Point.h  Simple_svg.hpp  Station.cpp  Station.h  Statistics.cpp  Statistics.h  Stretch.cpp  Stretch.h  Test.h  a.e  graph.cpp  graph.h  main.cpp  stretch.cpp  stretch.h  t.e  t.in  t.out  test.cpp  test.in
Metro0206/Sprawka/: SprawkoMenu.docx  Sprawko_Area_PROI.docx  Sprawko_Point_PROI.docx  Sprawko_SaveAndLoad_PROI.docx  Sprawozdanie ogólne.docx
Metro0206/include/: Area.h  Graph.h  Graphics.h  Parser.h  Point.h  Present.h  Simple_svg.hpp  Test.h
Metro0206/src/: Display.cpp  Graph.cpp  Makefile  Menu.cpp  Menu.h  Parser.cpp  Point.cpp  (+6 more)
Sprawka/: Sprawko_Present_PROI.docx  Sprawozdanie ogólne.docx
VisualMetro/: VisualMetro.pro  conndialog.cpp  conndialog.h  conndialog.ui  greetdialog.cpp  greetdialog.h  greetdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  selectdodialog.cpp  selectdodialog.h  selectdodialog.ui  stationsdialog.cpp  stationsdialog.h  stationsdialog.ui
build-VisualMetro-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.VisualMetro.Debug  object_script.VisualMetro.Release  ui_conndialog.h  ui_greetdialog.h  ui_mainwindow.h  ui_selectdodialog.h  ui_stationsdialog.h
include/: Area.h  Display.h  Graph.h  Graphics.h  Point.h  SaveAndLoad.h  Station.h  Stretch.h  Test.h
metro2019-master/: Area.cpp  Area.h  CMakeLists.txt  Graph.cpp  Point.h  Station.cpp  Stretch.cpp
src/: Area.cpp  Display.cpp  Graph.cpp  Graphics.cpp  Makefile  Menu.cpp  Point.cpp  Present.cpp  SaveAndLoad.cpp  Station.cpp  Stretch.cpp  a.e  b.e  main.cpp  main1.cpp  saved.txt
stretch/: stretch.cpp
tests/: test_main.cpp  test_main.h  test_scenario.cpp  test_scenario.h
(+29 files in other folders)
